# walking-controllers

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
code/cpp/: CMakeLists.txt  README.md
code/cpp/Joypad_module/: CMakeLists.txt
code/cpp/Walking_module/: CMakeLists.txt
code/cpp/Walking_module/include/: MPCSolver.hpp  TrajectoryGenerator.hpp  Utils.tpp  WalkingController.hpp  WalkingDCMReactiveController.hpp  WalkingInverseKinematics.hpp  WalkingLogger.hpp  WalkingLogger.tpp
code/cpp/Walking_module/src/: StableDCMModel.cpp  TimeProfiler.cpp  Utils.cpp  WalkingForwardKinematics.cpp  (+6 more)
code/cpp/app/: CMakeLists.txt
modules/StepAdaptation/: CMakeLists.txt
modules/StepAdaptation/include/: DCMPlanning.hpp  QPSolver.hpp  StepAdaptator.hpp  WalkingLogger.tpp
modules/StepAdaptation/src/: DCMPlanning.cpp  QPSolver.cpp  StepAdaptator.cpp
modules/StepAdaptation/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  StepAdaptationTest.cpp  cmake_install.cmake
modules/Utilities/: CMakeLists.txt
modules/Utilities/include/: TimeProfiler.hpp  Utils.hpp  Utils.tpp
modules/Utilities/src/: Utils.cpp
modules/WalkingLogger_module/: CMakeLists.txt
modules/WalkingLogger_module/LoggerClient/: CMakeLists.txt
modules/WalkingLogger_module/src/: WalkingLoggerModule.cpp  main.cpp
modules/Walking_module/: CMakeLists.txt
modules/Walking_module/include/: CartesianPID.hpp  ContactWrenchMapping.hpp  DCMEstimator.hpp  MPCSolver.hpp  QPSolver.hpp  RetargetingClient.hpp  RobotHelper.hpp  StableDCMModel.hpp  StepAdaptator.hpp  TrajectoryGenerator.hpp  Utils.hpp  WalkingAdmittanceController.hpp  WalkingConstraint.hpp  WalkingController.hpp  WalkingDCMModelPredictiveController.hpp  WalkingDCMReactiveController.hpp  WalkingForwardKinematics.hpp  WalkingInverseKinematics.hpp  WalkingModule.hpp  WalkingPIDHandler.hpp  WalkingQPInverseKinematics.hpp  WalkingQPInverseKinematics_osqp.hpp  WalkingQPInverseKinematics_qpOASES.hpp  WalkingTaskPriority.hpp  WalkingZMPController.hpp
modules/Walking_module/src/: CartesianPID.cpp  ContactWrenchMapping.cpp  DCMEstimator.cpp  MPCSolver.cpp  QPSolver.cpp  QPSolver.cpp.autosave  RetargetingClient.cpp  RobotHelper.cpp  StableDCMModel.cpp  StepAdaptator.cpp  TimeProfiler.cpp  TrajectoryGenerator.cpp  Utils.cpp  WalkingAdmittanceController.cpp  WalkingConstraint.cpp  WalkingController.cpp  WalkingDCMModelPredictiveController.cpp  WalkingDCMReactiveController.cpp  WalkingForwardKinematics.cpp  WalkingInverseKinematics.cpp  WalkingLogger.cpp  WalkingModule.cpp  WalkingModule.cpp_velocity  WalkingPIDHandler.cpp  WalkingQPInverseKinematics.cpp  WalkingQPInverseKinematics_osqp.cpp  WalkingQPInverseKinematics_qpOASES.cpp  WalkingTaskPriority.cpp  WalkingZMPController.cpp  main.cpp
modules/Walking_module/thrifts/: WalkingCommands.thrift
src/: CMakeLists.txt
src/Integrators/: CMakeLists.txt
src/Integrators/src/: jointIntegrators.cpp
src/JointControllers/: CMakeLists.txt
src/JointControllers/src/: AdmittanceController.cpp
src/JoypadModule/: CMakeLists.txt
src/JoypadModule/app/: CMakeLists.txt
src/JoypadModule/src/: Module.cpp  main.cpp
src/KinDynWrapper/: CMakeLists.txt
src/KinDynWrapper/src/: Wrapper.cpp
src/LoggerClient/: CMakeLists.txt
src/LoggerClient/src/: LoggerClient.cpp
src/LoggerModule/: CMakeLists.txt
src/LoggerModule/app/: CMakeLists.txt
src/LoggerModule/src/: Module.cpp  main.cpp
src/NavigationHelper/: CMakeLists.txt
src/NavigationHelper/src/: NavigationHelper.cpp
src/RetargetingHelper/: CMakeLists.txt
src/RetargetingHelper/src/: Helper.cpp
src/RobotInterface/: CMakeLists.txt
src/RobotInterface/RobotInterace/: CMakeLists.txt
src/RobotInterface/src/: Helper.cpp  MotorTemperatureChecker.cpp  PIDHandler.cpp
src/SimplifiedModelControllers/: CMakeLists.txt
src/SimplifiedModelControllers/src/: DCMModelPredictiveController.cpp  DCMReactiveController.cpp  MPCSolver.cpp  ZMPController.cpp
src/StdUtilities/: CMakeLists.txt
src/StepAdaptationController/: CMakeLists.txt
src/StepAdaptationController/src/: DCMSimpleEstimator.cpp  QPSolver.cpp  StepAdaptationController.cpp  StepAdaptationQPSolver.cpp
src/TimeProfiler/: CMakeLists.txt
src/TimeProfiler/src/: TimeProfiler.cpp
src/TrajectoryPlanner/: CMakeLists.txt
src/TrajectoryPlanner/src/: FreeSpaceEllipseManager.cpp  StableDCMModel.cpp  TrajectoryGenerator.cpp
src/WalkingModule/: CMakeLists.txt
src/WalkingModule/app/: CMakeLists.txt
src/WalkingModule/src/: Module.cpp  main.cpp
src/WalkingModule/thrifts/: WalkingCommands.thrift
src/WholeBodyControllers/: CMakeLists.txt
src/WholeBodyControllers/src/: BLFIK.cpp  BLFTSID.cpp  IntegrationBasedIK.cpp  InverseKinematics.cpp  QPInverseKinematics.cpp  QPInverseKinematics_osqp.cpp
src/YarpUtilities/: CMakeLists.txt
src/YarpUtilities/src/: Helper.cpp  TransformHelper.cpp  TransformServerHelper.cpp
src/iDynTreeUtilities/: CMakeLists.txt
src/iDynTreeUtilities/src/: Helper.cpp
src/libKinDyn_wrapper/: CMakeLists.txt
src/libKinDyn_wrapper/src/: Wrapper.cpp
src/libLogger_client/: CMakeLists.txt
src/libLogger_client/src/: LoggerClient.cpp
src/libRetargeting_helper/: CMakeLists.txt
src/libRetargeting_helper/src/: Helper.cpp
src/libRobot_helper/: CMakeLists.txt
src/libRobot_helper/src/: Helper.cpp  PIDHandler.cpp
src/libSimplified_model_controllers/: CMakeLists.txt
src/libSimplified_model_controllers/src/: DCMModelPredictiveController.cpp  DCMReactiveController.cpp  MPCSolver.cpp  ZMPController.cpp
src/libStd_helper/: CMakeLists.txt
src/libTime_profiler/: CMakeLists.txt
src/libTrajectory_planner/: CMakeLists.txt
src/libTrajectory_planner/src/: StableDCMModel.cpp  TrajectoryGenerator.cpp
src/libWhole_body_controllers/: CMakeLists.txt
src/libWhole_body_controllers/src/: InverseKinematics.cpp  QPInverseKinematics.cpp  QPInverseKinematics_qpOASES.cpp
src/libYARP_helper/: CMakeLists.txt
src/libYARP_helper/src/: Helper.cpp
src/libiDynTree_helper/: CMakeLists.txt
src/libiDynTree_helper/src/: Helper.cpp
tests/: CMakeLists.txt  RetargetingTest.cpp  YarpHelperTest.cpp
(+468 files in other folders)
