# Copyright (C) 2018 Fondazione Istituto Italiano di Tecnologia (IIT)
# All Rights Reserved.
# Authors: Giulio Romualdi <giulio.romualdi@iit.it>

add_subdirectory(libYARP_helper)
add_subdirectory(libiDynTree_helper)
add_subdirectory(libTime_profiler)
add_subdirectory(libStd_helper)
add_subdirectory(libSimplified_model_controllers)
add_subdirectory(libRobot_helper)
add_subdirectory(libWhole_body_controllers)
add_subdirectory(libTrajectory_planner)
add_subdirectory(libKinDyn_wrapper)
add_subdirectory(libRetargeting_helper)
add_subdirectory(libLogger_client)
add_subdirectory(WalkingModule)
add_subdirectory(JoypadModule)
add_subdirectory(LoggerModule)
