# Copyright (C) 2018 Fondazione Istituto Italiano di Tecnologia (IIT)
# All Rights Reserved.
# Authors: Giulio Romualdi <giulio.romualdi@iit.it>

add_subdirectory(YarpUtilities)
add_subdirectory(iDynTreeUtilities)
add_subdirectory(TimeProfiler)
add_subdirectory(StdUtilities)
add_subdirectory(SimplifiedModelControllers)
add_subdirectory(RobotInterface)
add_subdirectory(WholeBodyControllers)
add_subdirectory(TrajectoryPlanner)
add_subdirectory(KinDynWrapper)
add_subdirectory(RetargetingHelper)
add_subdirectory(LoggerClient)
add_subdirectory(WalkingModule)
add_subdirectory(JoypadModule)
add_subdirectory(LoggerModule)
add_subdirectory(StepAdaptationController)
